Fix links to work with the new Github page. Add more description to README.md.

--- a/about/index.html
+++ b/about/index.html
@@ -4,15 +4,16 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>About | Byron_Inc</title>
-		<link href="/about/about.css" rel="stylesheet" type="text/css" />
+		<link href="about.css" rel="stylesheet" type="text/css" />
 		<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+		<base href="/legacy/">
 	</head>
 	<nav>
 		<img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-		<a href="/index.html">Home</a>
-		<a class="active" href="/about">About</a>
-		<a href="/contact">Contact</a>
-		<a href="/more">More</a>
+		<a href="index.html">Home</a>
+		<a class="active" href="about">About</a>
+		<a href="contact">Contact</a>
+		<a href="more">More</a>
 	</nav>
 	<body>
 		<h1 style="text-align:center">About Byron</h1>
