--- a/easter-egg/1.html
+++ b/easter-egg/1.html
@@ -6,12 +6,13 @@
 		<title>Byron's Website</title>
 		<link href="easter-egg.css" rel="stylesheet" type="text/css" />
 		<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+		<base href="/legacy/">
 	</head>
 	<body>
 		<h1>my website :)))</h1>
 		<h2>hiiiiiiii welcome to my website</h2>
 		<p>ello</p>
 
-		<p><a href="/posts/post-1.html">Go back</a></p>
+		<p><a href="posts/post-1.html">Go back</a></p>
 	</body>
 </html>
