--- a/games/googol/index.html
+++ b/games/googol/index.html
@@ -6,13 +6,14 @@
         <title>Byron's Website</title>
         <link href="index.css" rel="stylesheet" type="text/css" />
         <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+        <base href="/legacy/">
     </head>
     <nav>
         <img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-        <a class="active" href="/index.html">Home</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
-        <a href="/more">More</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="about">About</a>
+        <a href="contact">Contact</a>
+        <a href="more">More</a>
     </nav>
     <body>
         <h1 class="title">The Game Of Googol</h1>
