--- a/games/match-the-objects/index.html
+++ b/games/match-the-objects/index.html
@@ -9,10 +9,10 @@
     </head>
     <nav>
         <img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-        <a class="active" href="/index.html">Home</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
-        <a href="/more">More</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="about">About</a>
+        <a href="contact">Contact</a>
+        <a href="more">More</a>
     </nav>
     <body>
         <h1 class="title">Match The Objects</h1>
@@ -40,7 +40,7 @@
             <td><img id="right" src="https://www.w3schools.com/css/img_trans.gif" width="1" height="1" onclick = "press('right')"></td>
         </tr>
         </table>
-        <a href="index.html"><button>Replay?</button></a> <a href="/games"><button>Main</button></a>
+        <a href="index.html"><button>Replay?</button></a> <a href="../index.html"><button>Main</button></a>
         <script src="index.js"></script>
     <body>
 </html>
