--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
         <title>Byron's Website</title>
         <link href="index/index.css" rel="stylesheet" type="text/css" />
         <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+        <base href="/legacy/">
     </head>
     <nav>
         <img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-        <a class="active" href="/index.html">Home</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
-        <a href="/more">More</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="about">About</a>
+        <a href="contact">Contact</a>
+        <a href="more">More</a>
     </nav>
     <body>
         <h1 class="title">Byron's Website</h1>
@@ -25,12 +26,12 @@
         <p>In that case, you had found the wrong website.</p>
         <p>Do you need help?</p>
         <p>Here's a button that leads to a blank page.</p>
-        <a href="/more/rickroll.html"><button type=button>about:blank</button></a>
+        <a href="more/rickroll.html"><button type=button>about:blank</button></a>
     
         <p>You're still here? It probably meant you wanted to come here, then. Have a seat, and go explore.</p>
     
         <br>
-        <p><a href="/more/donotenter.html">Don't click on this link, please.</a></p>
+        <p><a href="more/donotenter.html">Don't click on this link, please.</a></p>
         <script src="index.js"></script>
     </body>
 </html>
