--- a/more/rickroll.html
+++ b/more/rickroll.html
@@ -4,23 +4,25 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>Byron-roll | Byron_Inc</title>
-		<link href="/index/index.css" rel="stylesheet" type="text/css" />
+		<link href="../index/index.css" rel="stylesheet" type="text/css" />
 		<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+		<base href="/legacy/">
 	</head>
 	<nav>
 		<img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-		<a href="/index.html">Home</a>
-		<a href="/about">About</a>
-		<a href="/contact">Contact</a>
-		<a href="/more">More</a>
+		<a href="index.html">Home</a>
+		<a href="about">About</a>
+		<a href="contact">Contact</a>
+		<a href="more">More</a>
 	</nav>
 	<body>
 		<h1 class="title">Byron-rolled</h1>
 		<hr>
 		<p>I see. You have been Byron-rolled, eh?</p>
 		<p>Here's a Rickroll video for you. :></p>
-		<iframe width="720" height="405" src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
+		<iframe width="720" height="405" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=tzJDyyGYiWl1Zcfe"></iframe>
 		<p>Credit to Rick Astley for the song</p>
 		<p class="ps">Fun fact: Rickrolls are actually copyrighted</p>
 	</body>
 </html>
+
