--- a/tbg/report/index.html
+++ b/tbg/report/index.html
@@ -4,16 +4,17 @@
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width">
     	<title>Experiment 0 | Report | Byron_Inc</title>
-    	<link href="/index/index.css" rel="stylesheet" type="text/css" />
-    <link href="/tbg/report/report.css" rel="stylesheet" type="text/css" />
+    	<link href="/legacy/index/index.css" rel="stylesheet" type="text/css" />
+    	<link href="report.css" rel="stylesheet" type="text/css" />
     	<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+		<base href="/legacy/">
 	</head>
 	<nav>
         <img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-        <a href="/index.html">Home</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
-        <a href="/more">More</a>
+        <a href="index.html">Home</a>
+        <a href="about">About</a>
+        <a href="contact">Contact</a>
+        <a href="more">More</a>
     </nav>
 	<body>
 	    <h1 class="title">To make a report for an experiment</h1>
@@ -21,7 +22,7 @@
     	<hr>
     	<h2>Experiment <span id="expNo">0</span></h2>
       <p>TBGers involved: Byron_Inc_TBG</p>
-      <iframe id="experiment" src="archive/0.txt" width=95% height=400px></iframe>
-      <a href="archive/0.txt"><button>Previous</button></a><a href="archive/0.txt"><button>Next</button></a>
+      <iframe id="experiment" src="tbg/report/archive/0.txt" width=95% height=400px></iframe>
+      <a href="tbg/report/archive/0.txt"><button>Previous</button></a><a href="tbg/report/archive/0.txt"><button>Next</button></a>
   	</body>
 </html>
