--- a/tools/remind/index.html
+++ b/tools/remind/index.html
@@ -4,10 +4,11 @@
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width">  
     	<title>Reminder | Byron_Inc</title>
-    	<link href="/tools/random/random.css" rel="stylesheet" type="text/css" />
+    	<link href="../random/random.css" rel="stylesheet" type="text/css" />
     	<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+		<base href="/legacy/">
 		<script>
-		var x = new Audio("https://byroninc.repl.co/assets/bell.wav")
+		var x = new Audio("assets/bell.wav")
 		var y
 		function remind() {
 			var interval = document.getElementById("interval").value;
@@ -18,10 +19,10 @@
   	</head>
   	<nav>
     	<img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-    	<a href="/index.html">Home</a>
-    	<a href="/about">About</a>
-    	<a href="/contact">Contact</a>
-    	<a href="/more">More</a>
+    	<a href="index.html">Home</a>
+    	<a href="about">About</a>
+    	<a href="contact">Contact</a>
+    	<a href="more">More</a>
   	</nav>
   	<body>
     	<h1 class="title">Reminder</h1>
