--- a/dice/index.html
+++ b/dice/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <base href="/legacy/">
 </head>
 
 <body>
