--- a/more/donotenter.html
+++ b/more/donotenter.html
@@ -4,16 +4,17 @@
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width">
     	<title>Redirecting...</title>
-    	<meta http-equiv="refresh" content="3;url=/more/rickroll.html" />
-    	<link href="/index/index.css" rel="stylesheet" type="text/css" />
+    	<meta http-equiv="refresh" content="3;url=rickroll.html" />
+    	<link href="../index/index.css" rel="stylesheet" type="text/css" />
     	<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+		<base href="/legacy/">
 	</head>
 	<nav>
         <img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-        <a href="/index.html">Home</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
-        <a href="/more">More</a>
+        <a href="index.html">Home</a>
+        <a href="about">About</a>
+        <a href="contact">Contact</a>
+        <a href="more">More</a>
     </nav>
 	<body>
 	    <h1 class="title">Prohibited Land</h1>
