--- a/more/index.html
+++ b/more/index.html
@@ -4,25 +4,26 @@
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width">  
     	<title>More | Byron_Inc</title>
-    	<link href="/index/index.css" rel="stylesheet" type="text/css" />
+    	<link href="../index/index.css" rel="stylesheet" type="text/css" />
     	<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+		<base href="/legacy/">
   	</head>
   	<nav>
     	<img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-    	<a href="/index.html">Home</a>
-    	<a href="/about">About</a>
-    	<a href="/contact">Contact</a>
-    	<a class="active" href="/more">More</a>
+    	<a href="index.html">Home</a>
+    	<a href="about">About</a>
+    	<a href="contact">Contact</a>
+    	<a class="active" href="more">More</a>
   	</nav>
   	<body>
     	<h1 class="title">More stuff</h1>
     	<p class="subtitle">The navigation to pages in this website</p>
     	<hr>
-    	<p><a href="/more/edutales.html" class="list">Education Tales</a></p>
-    	<p><a href="/more/rickroll.html" class="list">Byron-roll</a></p>
-	    <p><a href="/posts" class="list">Byron Narrates</a></p>
-		  <p><a href="/tools" class="list">Tools</a></p>
-      <p><a href="/games" class="list">Games</a></p>
-      <p><a href="/tbg" class="list">TBG</a></p>
+    	<p><a href="/edutales.html" class="list">Education Tales</a></p>
+    	<p><a href="/rickroll.html" class="list">Byron-roll</a></p>
+	    <p><a href="../posts" class="list">Byron Narrates</a></p>
+		  <p><a href="../tools" class="list">Tools</a></p>
+      <p><a href="../games" class="list">Games</a></p>
+      <p><a href="../tbg" class="list">TBG</a></p>
   	</body>
 </html>
