--- a/tbg/index.html
+++ b/tbg/index.html
@@ -4,21 +4,22 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Byron's Website</title>
-        <link href="/index/index.css" rel="stylesheet" type="text/css" />
+        <link href="../index/index.css" rel="stylesheet" type="text/css" />
         <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+        <base href="/legacy/">
     </head>
     <nav>
         <img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-        <a class="active" href="/index.html">Home</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
-        <a href="/more">More</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="about">About</a>
+        <a href="contact">Contact</a>
+        <a href="more">More</a>
     </nav>
     <body>
         <h1 class="title">Byron's TBGs</h1>
         <p class="subtitle">They're just aids</p>
         <hr>
-        <p><a href="/tbg/report" class="list">To make a report for an experiment</a><br>
+        <p><a href="tbg/report" class="list">To make a report for an experiment</a><br>
         <p class="subtitle">Archive of reports</p>
     </body>
 </html>
