--- a/test/test.html
+++ b/test/test.html
@@ -4,8 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>repl.it</title>
-		<link href="/test/test.css" rel="stylesheet" type="text/css" />
+		<link href="test.css" rel="stylesheet" type="text/css" />
 		<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+		<base href="/legacy/">
 	</head>
 	<body>
 		<p>hi</p>
