--- a/tools/replace/index.html
+++ b/tools/replace/index.html
@@ -4,8 +4,9 @@
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width">  
     	<title>Replacer | Byron_Inc</title>
-    	<link href="/tools/random/random.css" rel="stylesheet" type="text/css" />
+    	<link href="../random/random.css" rel="stylesheet" type="text/css" />
     	<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
+		<base href="/legacy/">
 		<script>
 		function replace() {
 			var txt = document.getElementById("text").value;
@@ -19,10 +20,10 @@
   	</head>
   	<nav>
     	<img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
-    	<a href="/index.html">Home</a>
-    	<a href="/about">About</a>
-    	<a href="/contact">Contact</a>
-    	<a href="/more">More</a>
+    	<a href="index.html">Home</a>
+    	<a href="about">About</a>
+    	<a href="contact">Contact</a>
+    	<a href="more">More</a>
   	</nav>
   	<body>
     	<h1 class="title">Replacer</h1>
