--- a/contact/index.html
+++ b/contact/index.html
@@ -28,6 +28,6 @@
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		<p>Why are you still here?</p>
 		<p>Don't phish me.</p>
-		<script src="contact.js"></script>
+		<script src="contact/contact.js"></script>
 	</body>
 </html>
