--- a/games/dice-sim/index.html
+++ b/games/dice-sim/index.html
@@ -4,10 +4,10 @@
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width">
     	<title>Redirecting...</title>
-    	<meta http-equiv="refresh" content="3;url=../../more/rickroll.html" />
-    	<link href="../../index/index.css" rel="stylesheet" type="text/css" />
-    	<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
 		<base href="/legacy/">
+    	<meta http-equiv="refresh" content="3;url=more/rickroll.html" />
+    	<link href="index/index.css" rel="stylesheet" type="text/css" />
+    	<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
 	</head>
 	<nav>
         <img src="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png" alt="Byron">
