--- a/games/googol/index.html
+++ b/games/googol/index.html
@@ -23,6 +23,6 @@
         <button type="button" onclick="openCard()" width="300px">Open another card!</button>
         <button type="button" onclick="confirmCard()">Confirm!</button>
         <button type="button" onclick="config()">Reload!</button>
-        <script src="index.js"></script>
+        <script src="games/googol/index.js"></script>
     <body>
 </html>
