--- a/games/index.html
+++ b/games/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Byron's Website</title>
-        <link href="/index/index.css" rel="stylesheet" type="text/css" />
+        <link href="index/index.css" rel="stylesheet" type="text/css" />
         <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/765041144131878912/837168401885036544/unknown.png"/>
         <base href="/legacy/">
     </head>
@@ -23,6 +23,12 @@
         <p class="subtitle">Match the item on top with the items at the bottom. Quick! You only have 15 seconds.</p>
         <p><a href="games/googol" class="list">The Game of Googol</a><br>
         <p class="subtitle">You have 10 cards. Flip the cards one-by-one, and decide if it is of largest value.</p>
+        </p>
+        <p><a href="dice" class="list">Dice Simulator</a><br>
+        <p class="subtitle">An idle game I never got around to complete.</p>
+        <p><a href="riddle" class="list">Riddle?</a><br>
+        <p class="subtitle">An incomplete browser riddle game inspired by <a href="https://www.mcgov.co.uk/zahada.html">Zahaba</a>.</p>
+        </p>
         </p>
         <script src="index.js"></script>
     </body>
