--- a/more/index.html
+++ b/more/index.html
@@ -19,11 +19,12 @@
     	<h1 class="title">More stuff</h1>
     	<p class="subtitle">The navigation to pages in this website</p>
     	<hr>
-    	<p><a href="/edutales.html" class="list">Education Tales</a></p>
-    	<p><a href="/rickroll.html" class="list">Byron-roll</a></p>
-	    <p><a href="../posts" class="list">Byron Narrates</a></p>
-		  <p><a href="../tools" class="list">Tools</a></p>
-      <p><a href="../games" class="list">Games</a></p>
-      <p><a href="../tbg" class="list">TBG</a></p>
+    	<p><a href="more/edutales.html" class="list">Education Tales</a></p>
+    	<p><a href="more/rickroll.html" class="list">Byron-roll</a></p>
+	    <p><a href="posts" class="list">Byron Narrates</a></p>
+		  <p><a href="tools" class="list">Tools</a></p>
+      <p><a href="games" class="list">Games</a></p>
+      <p><a href="tbg" class="list">TBG</a></p>
+	  <p><a href="more/recursion1.html">Recursion</a></p>
   	</body>
 </html>
