--- a/tools/index.html
+++ b/tools/index.html
@@ -20,7 +20,8 @@
     	<p class="subtitle">Find some tools here!</p>
     	<hr>
     	<a href="tools/random"><p class="list">Random Generator</p></a>
-		<br>
 		<a href="tools/replace"><p class="list">Replacer</p></a>
+		<h2>Unfinished projects</h2>
+		<a href="tools/remind"><p class="list">Reminder</p></a>
   	</body>
 </html>
