--- a/more/index.html
+++ b/more/index.html
@@ -25,6 +25,6 @@
 		  <p><a href="tools" class="list">Tools</a></p>
       <p><a href="games" class="list">Games</a></p>
       <p><a href="tbg" class="list">TBG</a></p>
-	  <p><a href="more/recursion1.html">Recursion</a></p>
+	  <p><a href="more/recursion1.html" class="list">Recursion</a></p>
   	</body>
 </html>
