--- a/games/index.html
+++ b/games/index.html
@@ -27,7 +27,7 @@
         <p><a href="dice" class="list">Dice Simulator</a><br>
         <p class="subtitle">An idle game I never got around to complete.</p>
         <p><a href="riddle" class="list">Riddle?</a><br>
-        <p class="subtitle">An incomplete browser riddle game inspired by <a href="https://www.mcgov.co.uk/zahada.html">Zahaba</a>.</p>
+        <p class="subtitle">An incomplete browser riddle game inspired by <a href="https://www.mcgov.co.uk/zahada.html">Zahada</a>.</p>
         </p>
         </p>
         <script src="index.js"></script>
