Fix issue with incorrect links in CSS and JS files
Fix issue with incorrect links in CSS and JS files
Remove "yes/no" instructions in riddle/00-start

--- a/riddle/00-start.html
+++ b/riddle/00-start.html
@@ -19,7 +19,7 @@
         <p>The way you enter your answer... is a weird one. You have to change the link you're accessing to https://lithonhong.github.io/riddle/[level number]-[answer].html. If it is a single digit, add a 0 in front.</p>
         <p>For example, if you think the answer to level 17 is "fish", you should change the name of your link to https://lithonhong.github.io/riddle/17-fish.html</p>
         <p>The answers are sometimes a single word, sometimes a string of letters or numbers. Sometimes it can be more than one word. Remove any spaces from answers and remove any capitalisation (answers in lowercase only).</p>
-        <p>Am I clear? (Answer yes or no)</p>
+        <p>Am I clear?</p>
         <p>I hope I am.</p>
         <p>Are you ready?</p>
     </body>
