--- a/riddle/index.html
+++ b/riddle/index.html
@@ -14,7 +14,7 @@
         <p>Oh hello there, challenger.</p>
         <p>Are you ready to solve this series of riddles?</p>
         <p>Some of them will be easy, while some of them will be hard.</p>
-        <p>If you are ready, then you can <a href="00-start.html" class="hidden">begin</a>.</p>
+        <p>If you are ready, then you can <a href="riddle/00-start.html" class="hidden">begin</a>.</p>
         <p>Good luck!</p>
     </body>
 </html>
