--- a/dice/index.html
+++ b/dice/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Dice Simulator</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <base href="/legacy/">
 </head>
@@ -13,7 +13,7 @@
   <h1 id="title">Dice Simulator</h1>
   <div id="score">Score: <span id="point">0</span></div>
   <div id="display"><span id="diceCount">1</span>d<span id="diceSides">1</span> = <span id="roll"></span></div>
-  <script src="script.js"></script>
+  <script src="dice/script.js"></script>
 </body>
 
 </html>
