Fix recursion iframe leading to incorrect links

--- a/more/recursion2.html
+++ b/more/recursion2.html
@@ -19,6 +19,6 @@
 	    <h1 class="title">Recursion</h1>
 		<p class="subtitle">Mirroring...</p>
     	<hr>
-    	<iframe src="recursion1.html" width="1000" height="1000"></iframe>
+    	<iframe src="more/recursion1.html" width=99% height=99%></iframe>
 	</body>
 </html>
